<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    
   <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
       
    <TextView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/Name"/>   
       
    <EditText 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/nameEditText"
    android:hint=""/>
       
   </LinearLayout> 
   
    <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
       
    <TextView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/Address"/>   
       
    <EditText 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/adressEditText"
    android:hint=""/>
       
   </LinearLayout> 
   
    <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
       
    <TextView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/Gender"/>   
 
     <RadioGroup
        android:id="@+id/radioSex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
 
        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_male" 
            android:checked="true" />
 
        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_female" />
 
    </RadioGroup>
 
    
  </LinearLayout> 
  
    <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
       
    <TextView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/maritalstatus"/>   
 
     
       <ToggleButton android:id="@+id/togglebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="married"
        android:textOff="unmarried"/>
   
  </LinearLayout> 
   
    <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
       
    <TextView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/Hobbies"/>   
    
       <CheckBox android:id="@+id/playingCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/Playing"/>
       
        <CheckBox android:id="@+id/readingCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Reading"/>
        
         <CheckBox android:id="@+id/singingCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Singing"/>
         
 
</LinearLayout>
  <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
       
    <TextView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/Rating"/>  
    
    
     <RatingBar android:id="@+id/ratingbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="1.0"/>
    
</LinearLayout>

  
      <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    
          <Button 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnNext"      
        android:text="@string/Next"      
              />
          </LinearLayout>
</LinearLayout>